[package]
name = "rust-wren"
version = "0.7.0"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.55"
crossbeam = "0.8"
log = "0.4"
rust_wren_derive = { version = "*", path = "rust-wren-derive"}
inventory = "0.1"

[build-dependencies]
bindgen = "0.53.1"
