[package]
name = "rust-wren"
version = "0.16.0"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.55"
crossbeam = "0.8"
lazy_static = "1.4"
log = "0.4"
inventory = "0.1"
regex = "1.4"
rust-wren-derive = { version = "*", path = "rust-wren-derive"}
smol_str = "0.1"

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0"
glob = "0.3"
