[package]
name = "rust-wren-derive"
version = "0.6.1"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
rust-wren-derive-backend = { version = "*", path = "../rust-wren-derive-backend" }
